# advent-of-code-2023

./: .gitignore  Dockerfile  advent-of-code2023.cabal
app/: Day1.hs  Day2.hs  main.hs
notes/: Day3.txt
src/: Day1.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  main.hs
