cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

executable advent-of-code2023
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
