cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

executable advent-of-code2023
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1, Day2, Day3, Day4

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, directory, split, extra, array
    hs-source-dirs:   src
    default-language: Haskell2010
